refactor: make class fields final where appropriate and close scanners after use for better resource management